# dsa110-continuum

./: .gitignore  .mailmap  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  TODOS.md  WORKSPACE_GUIDE.md  inventory.csv  pyproject.toml  pyrightconfig.json  skills-lock.json
.playwright-cli/: page-2026-05-05T06-53-07-697Z.yml  page-2026-05-05T07-02-41-407Z.yml  page-2026-05-05T07-08-20-625Z.yml
docs/: GROUND_TRUTH.md  OLD_GROUND_TRUTH.md  dsa110-instrument.md  pipeline-future-work.md  pipeline-specs.md  pipeline_note.tex
dsa110_continuum/: __init__.py  _compat.py  _lazy_init.py  config.py
scripts/: .env  batch_pipeline.py  batch_pipeline.py.bak  batch_run_all_dates.sh  bench_forced_photometry.py  canary_history.py  check_import_migration.py  clean_check.sh  diagnose_phaseshift.py  forced_photometry.py  hdf5_calibrator_tile_smoke.py  inspect_epoch_artifacts.py  inspect_fits.py  inventory.py  (+26 more)
tools/dsacamera-monitor/: .gitignore  README.md  pyproject.toml
tools/dsacamera-monitor/.github/workflows/: pages.yml
tools/dsacamera-monitor/docs/: hosting-deepsynoptic.md
tools/dsacamera-monitor/dsacamera_monitor/: __init__.py  gaps.py  hdf5_pointing.py  manifest.py  scan.py
tools/dsacamera-monitor/dsacamera_monitor/site/: index.html
tools/dsacamera-monitor/dsacamera_monitor/site/css/: style.css
tools/dsacamera-monitor/dsacamera_monitor/site/js/: dashboard.js
tools/dsacamera-monitor/examples/: gitlab-ci.pages-dsacamera.yml
tools/dsacamera-monitor/scripts/: build_github_pages.py  serve_dashboard.sh
tools/dsacamera-monitor/tests/: test_dsacamera_monitor.py
(+511 files in other folders)
