[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dsacamera-monitor"
version = "0.1.0"
description = "Static dashboard and scanner for DSA-110 /data/incoming HDF5 inventory on dsacamera"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jakob Faber" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
dsacamera-incoming-scan = "dsacamera_monitor.scan:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
dsacamera_monitor = ["site/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
